# les-opdrachten

./: .gitignore  AIFA1.py  CMakeLists.txt  FA2-AI.py  FA3-AI.py  les_dingen.py  main.cpp  morse_code.py  morse_code_extra.py  python.py  tatatataaa.py  test.py
Blok B/: FA2-AI.py  kitt.py  knoppen.py  wave.py
Blok C/: 1_12.cpp  1_4.txt  1_7.cpp  1_7.h  2_1.cpp  2_1.h  2_5.cpp  2_5.h  een_twaalf.cpp  main.cpp  opdracht 1.1 - 1.5  proef tentamen PPC.txt  tempCodeRunnerFile.cpp  test.cpp  try.cpp
Blok C/W1/: 1_10.cpp  1_10.h  1_11.cpp  1_11.h  1_12.cpp  1_12.h  1_4.cpp  1_4.h  1_4.txt  1_6.cpp  1_6.h  1_7.cpp  1_8.cpp  1_8.h  1_9.cpp  1_9.h  een_twaalf.cpp
Blok C/W2/: 2_10.cpp  2_10.cpp.bak  2_10.h  2_12.cpp  2_12.cpp.bak  2_12.h  2_13.cpp  2_13.h  2_14.cpp  2_14.cpp.bak  2_14.h  2_5.cpp  2_5.cpp.bak  2_5.h  opgaven
Blok C/W3/: 3_12.cpp  3_12.h  3_3.cpp  3_3.h  3_6.cpp  3_6.h
Blok C/W4/: 4_2.cpp  4_2.h  4_5.cpp  4_5.h  4_6.cpp  4_6.h  lorem_ipsum  random.txt  random2.txt  winners.cpp  winners.h
Blok C/W5/: 5_4.cpp  5_4.h  5_6.cpp  5_6.h  5_8.cpp  5_8.h
Blok C/overige shit/: 1_6.cpp
Blok D/Book/: book.cpp  book.h  mainbook.cpp  mainbook.h
Blok D/line/: test.cpp  test.h  testmain.cpp  testmain.h
Blok D/meubels/: meubels.cpp  meubels.h  meubelsmain.cpp  meubelsmain.h
Blok D/rechthoek/: rechthoek.cpp  rechthoek.h  rechthoekmain.cpp  rechthoekmain.h
Blok D/test/: oo test main.cpp  oo test main.h  oo test.cpp  oo test.h
