cmake_minimum_required(VERSION 3.21)
project(les_opdrachten)

set(CMAKE_CXX_STANDARD 14)

add_executable(les_opdrachten
        "Blok C/main.cpp"
        "Blok C/W1/een_twaalf.cpp"
        "Blok C/W1/een_twaalf.h"
        "Blok C/W1/1_7.cpp"
        "Blok C/W1/1_7.h"
        "Blok C/2_5.cpp"
        "Blok C/2_5.h"
        "Blok C/2_1.cpp"
        "Blok C/2_1.h" "Blok C/W1/1_6.cpp" "Blok C/W1/1_6.h" "Blok C/W1/1_8.cpp" "Blok C/W1/1_8.h" "Blok C/W1/1_9.cpp" "Blok C/W1/1_9.h")