cmake_minimum_required(VERSION 3.21)
project(les_opdrachten)

set(CMAKE_CXX_STANDARD 14)

add_executable(les_opdrachten
        "Blok C/main.cpp"
        "Blok C/W1/1_7.cpp" "Blok C/W1/1_7.h"
        "Blok C/W2/2_5.cpp" "Blok C/W2/2_5.h"
        "Blok C/W1/1_6.cpp" "Blok C/W1/1_6.h"
        "Blok C/W1/1_8.cpp" "Blok C/W1/1_8.h"
        "Blok C/W1/1_9.cpp" "Blok C/W1/1_9.h"
        "Blok C/W1/1_10.cpp" "Blok C/W1/1_10.h"
        "Blok C/W1/1_11.cpp" "Blok C/W1/1_11.h"
        "Blok C/W1/1_12.cpp" "Blok C/W1/1_12.h"
        "Blok C/W2/2_5.cpp" "Blok C/W2/2_5.cpp"

        )