cmake_minimum_required(VERSION 3.21)
project(les_opdrachten)

set(CMAKE_CXX_STANDARD 14)

add_executable(les_opdrachten
        "main.cpp"
        "Blok C/W1/1_4.cpp" "Blok C/W1/1_4.h"
        "Blok C/W1/1_7.cpp" "Blok C/W1/1_7.h"
        "Blok C/W2/2_5.cpp" "Blok C/W2/2_5.h"
        "Blok C/W1/1_6.cpp" "Blok C/W1/1_6.h"
        "Blok C/W1/1_8.cpp" "Blok C/W1/1_8.h"
        "Blok C/W1/1_9.cpp" "Blok C/W1/1_9.h"
        "Blok C/W1/1_10.cpp" "Blok C/W1/1_10.h"
        "Blok C/W1/1_11.cpp" "Blok C/W1/1_11.h"
        "Blok C/W1/1_12.cpp" "Blok C/W1/1_12.h"
        "Blok C/W2/2_5.cpp" "Blok C/W2/2_5.cpp"
        "Blok C/W2/2_10.cpp" "Blok C/W2/2_10.h"
        "Blok C/W2/2_12.cpp" "Blok C/W2/2_12.h"
        "Blok C/W2/2_14.cpp" "Blok C/W2/2_14.h"
        "Blok C/W2/2_13.cpp" "Blok C/W2/2_13.h"
        "Blok C/W3/3_3.cpp" "Blok C/W3/3_3.h"
        "Blok C/W3/3_6.cpp" "Blok C/W3/3_6.h"
        "Blok C/W3/3_12.cpp" "Blok C/W3/3_12.h"
        "Blok C/W4/4_2.cpp" "Blok C/W4/4_2.h"
        "Blok C/W4/winners.h" "Blok C/W4/winners.cpp"
        "Blok C/W4/4_5.cpp" "Blok C/W4/4_5.h"
        "Blok C/W4/4_6.cpp" "Blok C/W4/4_6.h"
        "Blok C/W5/5_4.cpp" "Blok C/W5/5_4.h"
        "Blok C/W5/5_6.cpp" "Blok C/W5/5_6.h"
        "Blok C/W5/5_8.cpp" "Blok C/W5/5_8.h"
        "Blok C/test.cpp" "Blok C/test.h"
        "Blok D/Book/book.cpp" "Blok D/Book/book.h"
        "Blok D/Book/mainbook.cpp" "Blok D/Book/mainbook.cpp"
        "Blok D/meubels/meubels.cpp" "Blok D/meubels/meubelsmain.cpp"
        )